# rs-tony-starter

./: Cargo.toml
src/: configs.rs  interactions.rs  main.rs  template.rs
