[package]
name = "tony_starter"
description = "A simple way for initialize vite ts/react app"
authors = ["Antonio Giachin <giachinantonio@outlook.com>"]
license = "MIT"
repository = "https://github.com/antoniogiachin/rs-tony-starter.git"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dialoguer = "0.10.4"
spinners = "4.1.0"
